--- a/index.html
+++ b/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
 
-    <title>Class Relations Lab</title>
-    <meta name="description" content="Class Relations Lab in the Learn.co curriculum">
-    <meta name="author" content="Flatiron School">
+<head>
+  <meta charset="utf-8">
 
-    <link rel="stylesheet" href="node_modules/mocha/mocha.css">
-  </head>
+  <title>Class Relations Lab</title>
+  <meta name="description" content="Class Relations Lab in the Learn.co curriculum">
+  <meta name="author" content="Flatiron School">
 
-  <body>
-    <!-- <div> for Mocha to display test results. -->
-    <div id="mocha"></div>
+  <link rel="stylesheet" href="node_modules/mocha/mocha.css">
+</head>
 
-    <!-- Include Mocha and set it up for BDD-style testing. -->
-    <script src="node_modules/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd');</script>
+<body>
+  <!-- <div> for Mocha to display test results. -->
+  <div id="mocha"></div>
 
-    <!-- Include Chai as the matcher library. -->
-    <script src="node_modules/chai/chai.js"></script>
+  <!-- Include Mocha and set it up for BDD-style testing. -->
+  <script src="node_modules/mocha/mocha.js"></script>
+  <script>
+    mocha.setup('bdd');
+
+  </script>
+
+  <!-- Include Chai as the matcher library. -->
+  <script src="node_modules/chai/chai.js"></script>
 
 
 
 
-    <script src="node_modules/sinon/pkg/sinon.js"></script>
+  <script src="node_modules/sinon/pkg/sinon.js"></script>
 
-    <!-- Include the student's JavaScript file. -->
-    <script src="index.js"></script>
+  <!-- Include the student's JavaScript file. -->
+  <script src="index.js"></script>
 
-    <!-- Include the JavaScript file containing the tests. -->
-    <script src="test/indexTest.js"></script>
+  <!-- Include the JavaScript file containing the tests. -->
+  <script src="test/indexTest.js"></script>
 
-    <!-- Include Flatiron School's test runner to push results to Learn. -->
-    <script src="node_modules/learn-browser/learnBrowser.min.js"></script>
+  <!-- Include Flatiron School's test runner to push results to Learn. -->
+  <script src="node_modules/learn-browser/learnBrowser.min.js"></script>
 
-    
-  </body>
+
+</body>
+
 </html>
